# google_table_bot

./: alembic.ini  docker-compose.yml  pyproject.toml
bot/: config.py  fs_broker.py  logger.py  main.py  middelware.py  redis_con.py
bot/handler/: common.py  unknown.py
bot/schemas/: __init__.py  user.py
bot/utils/: keybB.py  redis_req.py  req.py  users.py
bot_subs/: app.py  bot.py  config.py  fs_broker.py
bot_subs/handlers/: __init__.py  error.py
bot_subs/schemas/: google_access.py
google_subs/: app.py  config.py  google_utils.py
google_subs/handlers/: users.py
google_subs/shemas/: google_shemas.py
migrations/: env.py
migrations/versions/: a80a7a2f3936_create_users.py
server_subs/: app.py  config.py  fs_broker.py
server_subs/db/: __init__.py  users.py
server_subs/handlers/: users.py
server_subs/schemas/: users.py
src/: config.py  fs_broker.py  logger.py  main.py
src/api/v1/: __init__.py
src/api/v1/routers/: __init__.py  users.py  utils.py
src/db/: db.py
src/middlewares/: log_middle.py
src/models/: __init__.py  base.py  users.py
src/schemas/: __init__.py  google_shemas.py
