[tool.poetry]
name = "google-bot"
version = "0.1.0"
description = ""
authors = ["Vladislav Lavrov <rvladislavrr@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^24.1.0"
aiogram = "^3.21.0"
aiohappyeyeballs = "^2.6.1"
aiohttp = "^3.12.15"
aiosignal = "^1.4.0"
annotated-types = "^0.7.0"
anyio = "^4.10.0"
attrs = "^25.3.0"
build = "^1.3.0"
cachecontrol = "^0.14.3"
cachetools = "^6.1.0"
certifi = "^2025.8.3"
charset-normalizer = "^3.4.2"
cleo = "^2.1.0"
click = "^8.2.1"
colorama = "^0.4.6"
crashtest = "^0.4.1"
distlib = "^0.4.0"
dulwich = "^0.24.1"
fast-depends = "^2.4.12"
fastjsonschema = "^2.21.1"
faststream = "^0.5.48"
filelock = "^3.18.0"
findpython = "^0.7.0"
frozenlist = "^1.7.0"
google-auth-httplib2 = "^0.2.0"
googleapis-common-protos = "^1.70.0"
h11 = "^0.16.0"
httpcore = "^1.0.9"
httplib2 = "^0.22.0"
httpx = "^0.28.1"
idna = "^3.10"
installer = "^0.7.0"
jaraco-classes = "^3.4.0"
jaraco-context = "^6.0.1"
jaraco-functools = "^4.2.1"
keyring = "^25.6.0"
magic-filter = "^1.0.12"
markdown-it-py = "^3.0.0"
mdurl = "^0.1.2"
more-itertools = "^10.7.0"
msgpack = "^1.1.1"
multidict = "^6.6.3"
nats-py = "^2.11.0"
oauth2client = "^4.1.3"
oauthlib = "^3.3.1"
packaging = "^25.0"
pbs-installer = "^2025.7.23"
pkginfo = "^1.12.1.2"
platformdirs = "^4.3.8"
poetry-core = "^2.1.3"
propcache = "^0.3.2"
proto-plus = "^1.26.1"
protobuf = "^6.31.1"
pyasn1 = "^0.6.1"
pyasn1-modules = "^0.4.2"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
pygments = "^2.19.2"
pyparsing = "^3.2.3"
pyproject-hooks = "^1.2.0"
python-dotenv = "^1.1.1"
pywin32-ctypes = "^0.2.3"
rapidfuzz = "^3.13.0"
redis = "^6.2.0"
requests = "^2.32.4"
requests-oauthlib = "^2.0.0"
requests-toolbelt = "^1.0.0"
rich = "^14.1.0"
rsa = "^4.9.1"
shellingham = "^1.5.4"
six = "^1.17.0"
sniffio = "^1.3.1"
tomlkit = "^0.13.3"
trove-classifiers = "^2025.5.9.12"
typer = "^0.16.0"
typing-inspection = "^0.4.1"
typing-extensions = "^4.14.1"
uritemplate = "^4.2.0"
urllib3 = "^2.5.0"
virtualenv = "^20.33.0"
watchfiles = "^1.1.0"
yarl = "^1.20.1"
zstandard = "^0.23.0"
fastapi = "^0.116.1"
alembic = "^1.16.4"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.42"
psycopg2 = "^2.9.10"
uvicorn = "^0.35.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
